added some weird CSS

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,10 @@
 body {
+  display: flex;
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  color: red;
+  background-color: blue;
+  justify-content: center;
 }
 
 ol, ul {
@@ -18,18 +22,19 @@ ol, ul {
 }
 
 .square {
-  background: #fff;
+  background: grey;
   border: 1px solid #999;
   float: left;
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 100px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
+  cursor: pointer;
 }
 
 .square:focus {
@@ -46,7 +51,7 @@ ol, ul {
 }
 
 .game-info {
-  margin-left: 20px;
+  margin-left: 80px;
 }
 
 
